--- a/registration.html
+++ b/registration.html
@@ -33,18 +33,18 @@
                 <div class="card-heading"></div>
                 <div class="card-body">
                     <h2 class="title">რეგისტრაცია</h2>
-                    <form method="POST">
+                    <form id="registration" method="POST">
                         <div class="input-group">
-                            <input class="input--style-3" type="text" placeholder="სახელი" name="name">
+                            <input class="input--style-3" id="fullName" type="text" placeholder="სახელი" name="name" required>
                         </div>
                         <div class="input-group">
-                            <input class="input--style-3 js-datepicker" type="text" placeholder="დაბ.წელ" name="birthday">
+                            <input id="born" class="input--style-3 js-datepicker" type="text" placeholder="დაბ.წელ" name="birthday" required>
                             <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
                         </div>
                         <div class="input-group">
-                            <div class="rs-select2 js-select-simple select--no-search">
-                                <select name="gender">
-                                    <option disabled="disabled" selected="selected">გენდერი</option>
+                            <div id="gender" class="rs-select2 js-select-simple select--no-search">
+                                <select id="gender" name="gender">
+                                    <option disabled="disabled" selected="selected" required>გენდერი</option>
                                     <option>კაცი</option>
                                     <option>ქალი</option>
                                     <option>სხვა</option>
@@ -53,14 +53,14 @@
                             </div>
                         </div>
                         <div class="input-group">
-                            <input class="input--style-3" type="email" placeholder="მაილი" name="email">
+                            <input class="input--style-3" id="username" type="email" placeholder="მაილი" name="email" required>
                         </div>
                         <div class="input-group">
-                            <input class="input--style-3" type="text" placeholder="მობილური" name="phone">
+                            <input class="input--style-3" id="password" type="password" placeholder="პაროლი" name="password" required>
+
                         </div>
                         <div class="p-t-10">
-                            <a href="/login.html" style="text-decoration: none;" class="btn btn--pill btn--green" type="submit">რეგისტრაცია</button>
-                            
+                            <button  style="text-decoration: none;" class="btn btn--pill btn--green" id="submit" type="submit">რეგისტრაცია</button> 
                         </div>
                     </form>
                 </div>
@@ -77,6 +77,7 @@
 
     <!-- Main JS-->
     <script src="js/global.js"></script>
+    <script type="module" src="js/registration.js"></script>
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
