--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <title>QALAQOBANA</title>
     <link rel="stylesheet" href="/css/mainPage.css">
     <link rel="stylesheet" href="/css/timer.css">
+    
 
 </head>
 <body>
@@ -76,6 +77,10 @@
     <button type="button" id="refreshGame" class="btn btn-danger" data-toggle="modal" style="margin-left: 5px;" data-target="#exampleModal">
       თავიდან
   </button>
+  <button type="button" id="quiz" class="btn btn-warning" data-toggle="modal" style="margin-left: 5px;" data-target="#exampleModal">
+    ქუიზი
+</button>
+
     </div>
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -100,6 +105,5 @@
   <script src="/js/timer.js"></script>
 
   
-
 </body>
 </html>
