--- a/main.html
+++ b/main.html
@@ -72,16 +72,18 @@
     <!-- Button trigger modalButton trigger modal -->
     <div id="modalButton">
     <button type="button" id="startGame" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
-        დაწყება
+      დაწყება
     </button>
     <button type="button" id="refreshGame" class="btn btn-danger" data-toggle="modal" style="margin-left: 5px;" data-target="#exampleModal">
       თავიდან
   </button>
-  <button type="button" id="quiz" class="btn btn-warning" data-toggle="modal" style="margin-left: 5px;" data-target="#exampleModal">
-    ქუიზი
+  <button type="button" id="remove" class="btn btn-warning" style="margin-left: 5px;" data-target="#exampleModal">
+    წაშლა
 </button>
+  
 
     </div>
+    
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
